# Apple-ContainerKit

./: .gitignore  CONTRIBUTING.md  FP_COMPLETE_INDEX.md  FP_IMPLEMENTATION_START.md  FP_PACKAGE_COMPLETE.md  FP_QUICK_START.md  FP_READY_TO_IMPLEMENT.md  FP_START_HERE.md  FP_START_NOW.md  FUNCTIONAL_PROGRAMMING_SUPPORT.md  LICENSE  README.md  components.json  jsrepo.config.ts  license-config.json  license-header.txt  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
scripts/: download-apple-container-cli.sh  test-devlue.ts
scripts/docs/: generate-migrations.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Assets.car  icon.sh
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  shell.rs  utils.rs
src/lib/components/atoms/: tooltip.svelte
src/lib/components/molecules/: delete-confirmation-dialog.svelte  dynamic-dialog.svelte  page-footer-actions.svelte  terminal.svelte  tooltip.svelte
src/lib/components/organisms/: theme-switcher.svelte  toolbar.svelte
src/lib/components/pages/: containerization-status.svelte  home.svelte  unsupported.svelte
src/lib/helpers/: constants.ts  default-shell.ts  routes.ts  themes-data.ts  try-catch.ts
src/lib/helpers/containerization/: images.ts
src/lib/hooks/: use-boolean.svelte.ts
src/lib/models/: bindings.ts  utils.ts
src/lib/schemas/: images.ts
src/lib/stores/: containerization.svelte.ts  default-settings.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  loading.svelte.ts
src/routes/(containerization)/: +layout.svelte
src/themes/: caffeine.css  kit.css
static/containerkit.icon/: icon.json
(+91 files in other folders)
