[package]
name = "ContainerKit"
version = "0.9.0"
description = "GUI for apple container"
authors = ["theetherGit"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "container_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tokio = { version = "1.45.1", features = ["full"] }
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
specta-typescript = "0.0.9"
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript", "derive"] }
tauri-plugin-devtools = "2.0.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-pty = "0.1.0"
elevated-command = "1.1.2"
tauri-plugin-dialog = "2"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
